@@ -1,6 +1,10 @@
 # for display continuity sake please use 2 spaces instead of tabs, also make  #
 # sure that lines break at 80 chars for constricted dispaly situations        #
 
+2015-12-20 ede
+  * add support for spatial datastore layers to EditDataStoreQueryPlugIn
+    allows finetuning the query created with Open->Data Store Layer
+
 2015-12-19 mmichaud <m.michael.michaud@orange.fr>
   * Add support to H2GIS spatial database
 
